--- a/templates/blog/post_partial.html
+++ b/templates/blog/post_partial.html
@@ -75,7 +75,7 @@
                         
                     {% else %}
                     
-                    <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
+                    <img src="{% static 'assets/images/top-chef.jpg' %}" class="img-responsive" data-pin-nopin="true">
                     
                     {% endif %}
                     <h5 class="">{{post.author.first_name}} {{post.author.last_name}}</h5>
