--- a/templates/userprofile/contributors.html
+++ b/templates/userprofile/contributors.html
@@ -20,7 +20,7 @@
 
     <section class="rp-post-header margin-top-40">
         <h4 class="rp-post-title h4-responsive">{% trans 'Nos chefs cuistos' %}</h4> 
-        <p class="text-center">Vous etes passionné(e)s de cuisine? Vous avez envie de partager votre art culinaire avec d'autres personnes? <b>Rejoignez la communauté!<b></p>
+        <p class="text-center">Vous êtes passionné(e)s de cuisine? Vous avez envie de partager votre art culinaire avec d'autres personnes? <b>Rejoignez la communauté!<b></p>
     </section>
 
 {% endblock header %}
