--- a/templates/video/video_partial.html
+++ b/templates/video/video_partial.html
@@ -82,7 +82,7 @@
                         
                     {% else %}
                     
-                    <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-responsive" data-pin-nopin="true">
+                    <img src="{% static 'assets/images/top-chef.jpg' %}" class="img-responsive" data-pin-nopin="true">
                     
                     {% endif %}
                     <h5 class="">{{video.author.first_name}} {{video.author.last_name}}</h5>
