--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -142,7 +142,7 @@
                                 </div>
                                 
 
-                        <button type="submit" class="btn btn-primary">{% trans 'Envoyer' %}</button>
+                        <button type="submit" class="btn btn-primary ladda-button" data-style="expand-right"><span class="ladda-label">{% trans 'Envoyer' %}</span></button>
 
                             
                     </div>
