--- a/templates/video/video_detail.html
+++ b/templates/video/video_detail.html
@@ -192,7 +192,7 @@
                             <div class="media">
                                 <a class="pull-left" href="#"> 
                                   
-                                    <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-rounded" width="50px;" alt="">
+                                    <img src="{% static 'assets/images/top-chef.jpg' %}" class="img-rounded" width="50px;" alt="">
                                 </a> 
                                 <div class="media-body rp-comment">
                                     <span class="rp-arrow">
