--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -25,7 +25,7 @@
         <meta property="og:title" content="Accueil" />
         <meta property="og:description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise" />
         <meta property="og:url" content="https://www.togokuizine.com" />
-        <meta property="og:image" content="image.jpg" />
+        <meta property="og:image" content="image" />
         <meta property="og:type" content="website" />
         <meta property="og:locale" content="fr_FR" />
 
