--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         <meta property="og:site_name" content="TogoKuizine">
         <meta property="og:title" content="Accueil" />
         <meta property="og:description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise" />
+        <meta name="keywords" content="recettes, cuisine, recettes de cuisine togolaise, africain, plat, entrée, dessert, plats, amuse-gueule, jus">
         <meta property="og:url" content="https://www.togokuizine.com" />
         <meta property="og:image" content="image.jpg" />
         <meta property="og:type" content="website" />
@@ -358,7 +359,6 @@
                         <div class="col-sm-4 col-xs-12">
                             <div class="single_widget wow fadeIn" data-wow-duration="400ms">
                                 <div class="footer_logo">
-                                    <!-- <h2>TogoKuizine</h2> -->
 
                                     <img src="{% static 'assets/images/tklogo.png' %}"  width="50%" alt="logo TogoKuizine">
 
