--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -71,7 +71,7 @@
                                 <div class="col-xs-12 col-md-12 col-lg-12">
                                 <label for="id_title">{{form.origin.label}}:</label>
                                 {{ form.origin }}
-                                <span><a class="create-origin" title="Ajouter une ethnie" data-toggle="modal" data-target="#modal-book"><i class="fa fa-plus"></i></a></span>
+                                <span><a class="create-origin" title="Ajouter une région" data-toggle="modal" data-target="#modal-book"><i class="fa fa-plus"></i></a></span>
                                 <br>
                                  <span class="helptext">{{ form.origin.help_text }}</span>
                             </div>
