--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -70,7 +70,7 @@
                         <li><a href="#commentaire"><i class="fa fa-comments cook-second-color" aria-hidden="true"></i></a>{{comment_count}}</li>
                     </ul>
 
-                    <p class="">{{post.text|safe}}</p>
+                    <p class="padding-20" >{{post.text|safe}}</p>
 
                 </div>
 
