--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -142,7 +142,9 @@
                                 </div>
                                 
 
-                        <button type="submit" class="btn btn-primary ladda-button" data-style="expand-right"><span class="ladda-label">{% trans 'Envoyer' %}</span></button>
+                        <button type="submit" class="btn btn-primary hovering ld-over-full-inverse" data-style="expand-right">
+                            <div class="ld ld-ball ld-flip"></div>
+                            <span class="ladda-label">{% trans 'Envoyer' %}</span></button>
 
                             
                     </div>
