--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" href="{% static 'dashboard/assets/vendor/charts/c3charts/c3.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/assets/vendor/fonts/flag-icon-css/flag-icon.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/select2.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/loading-btn/loading.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/loading-btn/loading-btn.css' %}">
 
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     
