--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -51,6 +51,37 @@
        
         <script src="{% static 'assets/js/jquery.min.js' %}"></script>
         <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript">
+            
+            $(document).ready(function() {
+
+                toastr.options = {
+                  "closeButton": false,
+                  "debug": false,
+                  "newestOnTop": false,
+                  "progressBar": true,
+                  "positionClass": "toast-top-right",
+                  "preventDuplicates": false,
+                  "onclick": null,
+                  "showDuration": "300",
+                  "hideDuration": "1000",
+                  "timeOut": "5000",
+                  "extendedTimeOut": "1000",
+                  "showEasing": "swing",
+                  "hideEasing": "linear",
+                  "showMethod": "fadeIn",
+                  "hideMethod": "fadeOut"
+                 }
+        });
+        </script>
+        {% if messages %}
+            {% for message in messages %}
+             
+            <script type="text/javascript">
+                   toastr.{{message.tags }}("{{ message }}");
+              </script>
+            {% endfor %}
+        {% endif  %}
         <noscript>Your browser does not support JavaScript!</noscript>
         
     </body>
