--- a/templates/recipe/recipe_update.html
+++ b/templates/recipe/recipe_update.html
@@ -132,7 +132,10 @@
 
                             <div class="row">
                                 <div class="col-xs-12 col-md-12 col-lg-12">
-                                    <button type="submit" class="save btn btn-success">{% trans 'Enregistrer' %}</button>
+                                    <button type="submit" class="save btn btn-success ld-over-full-inverse">
+                                                                <div class="ld ld-ball ld-flip"></div>
+
+                                    {% trans 'Enregistrer' %}</button>
                                 </div>
                                
                             </div>
