--- a/gastronomie/static/assets/css/style.css
+++ b/gastronomie/static/assets/css/style.css
@@ -211,6 +211,7 @@ p:last-child {
 .blog_title{
     margin-bottom: 0px;
     font-size: 2.1rem;
+    letter-spacing: .02em;
     color: rgba(17, 17, 17, 0.81);
 }
 
@@ -2581,6 +2582,10 @@ iframe{
     .separator4{
        display: none;
     }
+.rp-post-title,
+    .blog_title{
+    font-size: 1.2rem;
+  }
 
 }
 
@@ -2609,8 +2614,9 @@ iframe{
     z-index: 49;
   }
 
+.rp-post-title,
   .blog_title{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 }
  @media screen and (max-width: 992px) {
@@ -2642,6 +2648,10 @@ iframe{
 
       .margin-top-40{
         margin-top: 20px;
+      }
+.rp-post-title
+      ,.blog_title{
+        font-size: 1.2rem;
       }
   }
 
