--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -73,6 +73,7 @@
                                       <div class="form-group">
                                        
                                           {{ form.password |add_class:'form-control'}} 
+                                          <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                                           <span class="help-block">{{ form.password.error }}</span>
                                       </div>
                                       
