--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -142,8 +142,8 @@
                                 </div>
                                 
 
-                        <button type="submit" class="btn btn-primary hovering ld-over-full-inverse" data-style="expand-right">
-                            <div class="ld ld-ball ld-flip"></div>
+                        <button type="submit" class="btn btn-primary has-spinner" data-style="expand-right">
+                           
                             <span class="ladda-label">{% trans 'Envoyer' %}</span></button>
 
                             
