--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,12 @@
 
         </title>
         <meta name="application-name" content="TogoKuizine">
-        <meta name="description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise">
+        <meta name="description" content="Découvrir-Cuisiner-Savourer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:site_name" content="TogoKuizine">
         <meta property="og:title" content="Accueil" />
         <meta property="og:description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise" />
-        <meta name="keywords" content="recettes, cuisine, recettes de cuisine togolaise, africain, plat, entrée, dessert, plats, amuse-gueule, jus">
+        <meta name="keywords" content="recettes, cuisine, recettes de cuisine togolaise, africain, plat, entrée, dessert, plats, amuse-gueule, jus,togo">
         <meta property="og:url" content="https://www.togokuizine.com" />
         <meta property="og:image" content="image.jpg" />
         <meta property="og:type" content="website" />
