--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -111,11 +111,26 @@
                             <div class="col-xs-12 col-md-6 col-lg-6">
                                 <label for="id_title">{{form.image_3.label}}:</label>
                                 {{ form.image_3 }}
-                                 <span class="helptext">{{ form.image_2.help_text }}</span>
+                                 <span class="helptext">{{ form.image_3.help_text }}</span>
                             </div>
                            
                         </div>
                          <br>
+                         <div class="row">
+                            <div class="col-xs-12 col-md-6 col-lg-6">
+                                <label for="id_title">{{form.image_4.label}}:</label>
+                                {{ form.image_4 }}
+                                 <span class="helptext">{{ form.image_4.help_text }}</span>
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-6">
+                                <label for="id_title">{{form.image_5.label}}:</label>
+                                {{ form.image_5 }}
+                                 <span class="helptext">{{ form.image_5.help_text }}</span>
+                            </div>
+                           
+                        </div>
+                        <br>
+
                         <div class="row">
                             <div class="col-xs-12">
                                 <label for="id_title">{{form.ingredient.label}}:</label>
