--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -167,6 +167,24 @@
                         {% endthumbnail %}
                     </div>
                     {% endif %}
+
+                    {% if recipe.image_4 %}
+               
+                    <div class="item">
+                        {% thumbnail recipe.image_4  "900x650" crop="center" as img %}
+                       <img src="{{img.url}}" class="img-responsive">
+                        {% endthumbnail %}
+                    </div>
+                    {% endif %}
+
+                    {% if recipe.image_5 %}
+               
+                    <div class="item">
+                        {% thumbnail recipe.image_5  "900x650" crop="center" as img %}
+                       <img src="{{img.url}}" class="img-responsive">
+                        {% endthumbnail %}
+                    </div>
+                    {% endif %}
                     
 
                 </div>
