--- a/templates/django_social_share/templatetags/post_to_facebook.html
+++ b/templates/django_social_share/templatetags/post_to_facebook.html
@@ -1,1 +1,1 @@
-<a class="btn fb-bg waves-effect waves-light" href="{{ facebook_url }}" title="Partager sur facebook"><i class="fa fa-facebook left" target="_blank"></i><span class="hidden-xs">  | Share on Facebook</span></a>
+<a class="btn fb-bg waves-effect waves-light" href="{{ facebook_url }}" title="Partager sur facebook" target="_blank"><i class="fa fa-facebook left" target="_blank"></i><span class="hidden-xs">  | Share on Facebook</span></a>
