--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -90,7 +90,7 @@
 
 
                  <!--Facebook-->
-                {% post_to_facebook %}
+                {% post_to_facebook "" %}
 
                 
                 <!--Twitter-->
