modifié :         gastronomie/static/assets/css/style.css 	modifié :         templates/base.html 	modifié :         templates/blog/post_detail.html 	modifié :         templates/recipe/recipe_update.html 	modifié :         templates/restaurant/restaurant_list.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,11 @@
 
         </title>
         <meta name="application-name" content="TogoKuizine">
-        <meta name="description" content="Découvrir-Cuisiner-Savourer">
+        <meta name="description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:site_name" content="TogoKuizine">
         <meta property="og:title" content="Accueil" />
-        <meta property="og:description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise" />
+        <meta property="og:description" content="Découvrir-Cuisiner-Savourer" />
         <meta name="keywords" content="recettes, cuisine, recettes de cuisine togolaise, africain, plat, entrée, dessert, plats, amuse-gueule, jus,togo">
         <meta property="og:url" content="https://www.togokuizine.com" />
         <meta property="og:image" content="image.jpg" />
@@ -444,7 +444,7 @@
 
                     <div class="col-sm-6 col-xs-6">
 
-                        <div class="footer_socail_right">
+                        <div class="footer_socail_right" style="padding-top: 15px;">
                            
                             <a href="https://www.facebook.com/TogoKuizine-2180297015542613" target="blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com/TKuizine"><i class="fa fa-twitter" target="blank"></i></a>
