--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -73,7 +73,11 @@
                         <li><a href="#commentaire"><i class="fa fa-comments cook-second-color" aria-hidden="true"></i></a>{{comment_count}}</li>
                     </ul>
 
-                    <p class="padding" >{{post.text|safe}}</p>
+                    <div class="padding">
+                                    {{post.text|safe}}
+                                    
+
+                                </div>
 
                 </div>
 
