--- a/templates/recipe/recipe_update.html
+++ b/templates/recipe/recipe_update.html
@@ -126,7 +126,19 @@
                                 </div>
                                
                             </div>
-                           
+                           <div class="row">
+                                <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.image_4.label}}:</label>
+                                    {{ form.image_4}}
+                                   
+                                </div>
+                                <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.image_5.label}}:</label>
+                                    {{ form.image_5 }}
+                                    
+                                </div>
+                               
+                            </div>
 
                             
 
