--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-md-7">
                     <h4 class="rp-post-title">{{ restaurant.name}}</h4>
-                  <div class="padding">
+                    <div class="padding">
   
                    <!--Rating-->
                         
@@ -70,7 +70,7 @@
                             {% endif %}
                                
                             {% if restaurant.web_site %}  
-                                <li><strong>Web site: </strong><a href="{{restaurant.web_site}}"> {{restaurant.web_site}}</a></li>
+                                <li><strong><i class="fa fa-globe" aria-hidden="true"></i> </strong><a href="{{restaurant.web_site}}"> {{restaurant.web_site}}</a></li>
                             {% endif %}   
                             </ul>
                             
