--- a/templates/500.html
+++ b/templates/500.html
@@ -10,6 +10,7 @@
 				<h1>5<span>0</span>0</h1>
 			</div>
 			<h2>Une erreur est survenue sur le serveur</h2>
+			<p>Veuillez contacter <a href="">l'administrateur du site</a></p>
 			<a href="/" class="btn btn-default">Accueil</a>
 			
 		</div>
