--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -71,9 +71,9 @@
 
                     <li>
                    
-                        <a type="button" class="like" data-like-pk="{{recipe.pk}}" id="like" {% if ip in list_ip %} title="je n'aime plus" {% else %} title="j'aime" {% endif %}><i class="fa fa-heart" aria-hidden="true"></i></a><span id="count-like-{{recipe.pk}}"> {{likes.count}}</span>
+                       <!--  <a type="button" class="like" data-like-pk="{{recipe.pk}}" id="like" {% if ip in list_ip %} title="je n'aime plus" {% else %} title="j'aime" {% endif %}><i class="fa fa-heart" aria-hidden="true"></i></a><span id="count-like-{{recipe.pk}}"> {{recipe.like}}</span> -->
                         
-                    
+                      
                       
                     
 
