--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -69,16 +69,9 @@
                     
                     <li><i class="fa fa-eye cook-second-color" aria-hidden="true"></i>{{recipe.view}}</li>
 
-                    <li>
-                   
-                       <!--  <a type="button" class="like" data-like-pk="{{recipe.pk}}" id="like" {% if ip in list_ip %} title="je n'aime plus" {% else %} title="j'aime" {% endif %}><i class="fa fa-heart" aria-hidden="true"></i></a><span id="count-like-{{recipe.pk}}"> {{recipe.like}}</span> -->
+                    <li>         
+                       <a type="button" class="like" data-like-pk="{{recipe.pk}}" id="like" {% if ip in list_ip %} title="je n'aime plus" {% else %} title="j'aime" {% endif %}><i class="fa fa-heart" aria-hidden="true"></i></a><span id="count-like-{{recipe.pk}}"> {{recipe.like}}</span> 
                         
-                      
-                      
-                    
-
-
-
                     </li>
                     
                     {% get_comment_count for recipe as comment_count %}
