Modif detail Url

--- a/templates/blog/post_draft_list.html
+++ b/templates/blog/post_draft_list.html
@@ -41,7 +41,7 @@
               
                 <div class="card-body">
 
-                    <table class="table table-bordered table-hover table-striped">
+                    <table class="table table-bordered table-hover table-striped" id="blog-table">
                         <thead>
                             <tr>
                                 <th>Created at</th>                        
@@ -142,4 +142,18 @@
 
 </div>
 
+{% endblock %}
+
+
+{% block scripts %}
+
+<script type="text/javascript">
+    $(document).ready( function () {
+        $('#blog-table').DataTable(
+        {
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+            
+            });
+    } );
+</script>
 {% endblock %}
