--- a/templates/blog/post_publish_list.html
+++ b/templates/blog/post_publish_list.html
@@ -40,7 +40,7 @@
             <div class="card">
               
                 <div class="card-body">
-                    <table class="table table-bordered table-hover table-striped">
+                    <table class="table table-bordered table-hover table-striped" id="blog-table">
                         <thead>
                             <tr>
                                 <th>{% trans 'Publié le' %}</th>
@@ -146,3 +146,16 @@
     
 {% endblock content %}
 
+
+{% block scripts %}
+
+<script type="text/javascript">
+    $(document).ready( function () {
+        $('#blog-table').DataTable(
+        {
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+            
+            });
+    } );
+</script>
+{% endblock %}
