--- a/templates/video/video_draft_list.html
+++ b/templates/video/video_draft_list.html
@@ -41,7 +41,7 @@
               
                 <div class="card-body">
                        
-                    <table class="table table-bordered table-hover table-striped">
+                    <table class="table table-bordered table-hover table-striped" id="video-table">
                         <thead>
                             <tr>
                                 <th>{% trans 'Date' %}</th>                        
@@ -143,4 +143,17 @@
     </div>
 
 </div>
+{% endblock %}
+
+{% block scripts %}
+
+<script type="text/javascript">
+    $(document).ready( function () {
+        $('#video-table').DataTable(
+        {
+            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]]
+            
+            });
+    } );
+</script>
 {% endblock %}
