--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/select2.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/loading-btn/loading.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/loading-btn/loading-btn.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/dataTable/datatables.css' %}">
 
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     
@@ -339,7 +340,9 @@
     <script src="{% static 'dashboard/assets/vendor/charts/c3charts/d3-5.4.0.min.js' %}"></script>
     <script src="{% static 'dashboard/assets/vendor/charts/c3charts/C3chartjs.js' %}"></script>
     <script src="{% static 'dashboard/assets/libs/js/dashboard-ecommerce.js' %}"></script>
+    <script src="{% static 'assets/dataTable/datatables.min.js' %}"></script>
     <script src="{% static 'assets/js/select2.min.js' %}"></script>
+
     <script src="{% static 'django_select2/django_select2.js' %}"></script>
     <script src="{% static 'django_addanother/django_jquery.js' %}"></script>
     <script src="{% static 'ckeditor/ckeditor-init.min.js' %}"></script>
@@ -380,7 +383,8 @@
       </script>
    	{% endfor %}
     {% endif %}
-
+    {% block scripts %}
+    {% endblock %}
 
 </body>
 </html>
