--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -42,7 +42,7 @@
                     {% endthumbnail %} 
                 
                 {% else %}
-                    <img src="{% static 'assets/images/news.png' %}" class="img-responsive">     
+                    <img src="{% static 'assets/images/news.png' %}" class="img-responsive" width="50%">     
                 {% endif %}
 
                 <br>
